Comments collapse, permalink, ui, fix #38, fix #37

--- a/src/less/markdown.less
+++ b/src/less/markdown.less
@@ -8,7 +8,13 @@ font-size: 1em;
 line-height: 1.4em;
 
 a {
-	text-decoration: underline;
+	text-decoration: none;
+	font-weight: bold;
+	color: white;
+	&:hover {
+		text-decoration: underline;
+		color: lighten(@col-primary, 10%);
+	}
 }
 
 p, blockquote, ul, ol, dl, table, pre {
